[package]
name = "orbiter-logic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"
smallvec = "1.8"
anyhow = "1.0.56"
