[package]
name = "orbiter-logic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"
smallvec = "1.8"
anyhow = "1.0.56"

wasm-bindgen = { version = "0.2.79", optional = true }
js-sys = { version = "0.3.46", optional = true }

[features]
wasm = [ "wasm-bindgen", "web-sys" ]

[dependencies.web-sys]
optional = true
version = "0.3.56"
features = [
  'Document',
  'Element',
  'KeyboardEvent',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
]
