[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbiter-logic = { path = "../orbiter-logic" }
actix-web = { version = "4.0.1" }
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.64"
