[package]
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["msakuta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbiter-logic = { path = "../orbiter-logic" }
actix-web = { version = "4.0.1" }
actix-cors = "0.6.1"
actix-files = "0.6.0"
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.64"
serde = "1.0.100"

[features]
default = ["example_non_debian_build"]
example_non_debian_build = []
example_debian_build = []
