[package]
name = "webgl-orbiter-server"
version = "0.1.0"
edition = "2018"
authors = ["msakuta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbiter-logic = { path = "../orbiter-logic" }
actix = "0.13.0"
actix-web = { version = "4.0.1" }
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.64"
serde = "1.0.136"

[package.metadata.deb]
maintainer = "masahiro.sakuta"
copyright = "2022, Masahiro Sakuta."
extended-description = "web server application for WebGL-Orbiter"
depends = "$auto"
priority = "optional"
assets = [
    # binary
    ["target/release/webgl-orbiter-server", "usr/bin/webgl-orbiter-server", "755"],
    ["start.sh", "usr/bin/webgl-orbiter", "755"],
    # assets
    ["../dist/*", "var/lib/webgl-orbiter", "644"],
]
default-features = false
features = ["example_debian_build"]

[package.metadata.deb.variants.debug]
assets =  [
    # assets
    ["../dist/*", "var/lib/webgl-orbiter", "644"],
]

[features]
default = ["example_non_debian_build"]
example_non_debian_build = []
example_debian_build = []
